# MessageRemover

./: README.md  main.py  pyproject.toml
messageremover/: __init__.py  bot.py
