[tool.poetry]
name = "MessageRemover"
version = "0.1.0"
description = ""
authors = ["DLCHAMP <36091350+dlchamp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
disnake = "^2.5.1"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
